# solos

./: Anchor.toml  package.json
.github/workflows/: codeql-analysis.yml
programs/solos/: Cargo.toml
programs/solos-strategy/: Cargo.toml
programs/solos-strategy/src/: lib.rs
programs/solos/src/: lib.rs
programs/token-lending-anchor-wrapper/: Cargo.toml
programs/token-lending-anchor-wrapper/src/: lib.rs
tests/: solos.ts
token-lending/cli/src/: main.rs
token-lending/program/: Cargo.toml
token-lending/program/src/: instruction.rs  processor.rs
token-lending/program/src/state/: obligation.rs  reserve.rs
