[package]
name = "token-lending-anchor-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_lending_anchor_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
spl-token-lending = { path = "../../token-lending/program", features = [ "no-entrypoint" ] }
